src/objects/PSE_PulseCheck_Project__c.object
<CustomObject>
    <fields>
        <fullName>PSE_End_Date__c</fullName>
        <defaultValue>TODAY()+90</defaultValue>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSE_Is_Executive_sponsored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Executive sponsored?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSE_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Managed_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSE_Project_Priority__c</fullName>
        <label>Project Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSE_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSE_Project_Manager__c</columns>
        <columns>PSE_Project_Priority__c</columns>
        <columns>PSE_Start_Date__c</columns>
        <columns>PSE_End_Date__c</columns>
        <columns>PSE_Is_Executive_sponsored__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>